--- a/style.css
+++ b/style.css
@@ -29,12 +29,9 @@ body{
 header{
     text-align: center;
     display: grid;
-    grid-template-columns: repeat(2,50%);
     margin-top: 10px;
 }
-nav{
-    grid-column: span 2;
-}
+
 header img{
     background-color: black;
     border-radius: 70%;
@@ -81,7 +78,7 @@ h1{
 }
 .container{
     display: grid;
-    grid-template-columns:19% 27% 27% 27% ;
+    
 }
 .container a{
     color: black;
@@ -93,7 +90,7 @@ footer{
     background-color: black;
 }
 .post{
-    padding: 50px;
+    
     background-color: rgb(218, 221, 220);    
 }
 footer ul{
@@ -105,24 +102,52 @@ footer ul{
     /* background-color:black; */
     display: grid;
     color: white;
-    grid-template-columns: repeat(5,20%);
+    
     padding-left: 100px;
 }
-.post ,aside{
-    padding-top: 170px;
-    padding-bottom: 190px;
-}
+
 aside{
     background-color: white;
-    grid-column: 1/2;
-    grid-row: 1/2;
 }
-#post01{
-    grid-column: 2/3;
+@media (min-width: 1340px){
+    aside       { grid-column: 1/2; 
+                grid-row: 1/2; }
+    nav         { grid-column: span 2; }
+    header      { grid-template-columns: repeat(2,50%); }
+    .container  { grid-template-columns:19% 27% 27% 27% ;}
+    #post01     { grid-column: 2/3; }
+    #post02     { grid-column: 3/4; }
+    #post03     { grid-column: 4/5; }
+    .post       { padding: 50px;}
+    .fcontainer { grid-template-columns: repeat(5,20%); }
+    .post,aside { padding-top: 170px;
+                padding-bottom: 190px; }
+    
 }
-#post02{
-    grid-column: 3/4;
+@media (min-width: 1200px) and (max-width: 1339px){
+    header      { grid-template-columns: repeat(2,50%); }
+    nav         { grid-column: span 2; }
+    .container  { grid-template-columns:19% 27% 27% 27% ;}
+    #post01     { grid-column: 2/3; }
+    #post02     { grid-column: 3/4; }
+    #post03     { grid-column: 4/5; }
+    aside       { grid-column: 1/2; 
+                grid-row: 1/2; }
+    .post       { padding: 30px;}
+    .post,aside { padding-top: 100px;
+                    padding-bottom: 120px; }
+    .fcontainer { grid-template-columns: repeat(5,20%); }
+    
 }
-#post03{
-    grid-column: 4/5;
+@media (min-width:700px) and (max-width:1199px){
+    header      { grid-template-columns: repeat(2,50%); }
+    nav         { grid-column: span 2; }
+    .container  { grid-template-columns: 70% 30% ; grid-template-rows: repeat(3,calc(100%/3));}
+    aside       { grid-column: 2/3; grid-row: span 3; background-color:  rgb(218, 221, 220); }
+    #post01     { grid-column: 1/2; grid-row: 1/2;}
+    #post02     { grid-column: 1/2; grid-row: 2/3;}
+    #post03     { grid-column: 1/2; grid-row: 3/4; padding-bottom: 50px;}
+    .fcontainer { grid-template-columns: repeat(5,20%); }
+    .post       { padding-left: 50px; padding-top: 30px; padding-right: 50px; text-align: justify;}
+    #asd        { background-color: white; padding-top:10px; margin-top: 30px; padding-bottom: 10px; margin-right: 20px; }
 }
